--- a/componentes/pubspec.yaml
+++ b/componentes/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.0"
+
+flutter_icons:
+  android: true 
+  ios: true
+  image_path: "assets/icon/icon.png"
+  adaptative_icon_background: "assets/icon/icon.png"
 
 
 # For information on the generic Dart part of this file, see the
